Made the plugin work from java 8

--- a/build.gradle
+++ b/build.gradle
@@ -61,5 +61,5 @@ processResources {
 shadowJar {
     minimize()
     archiveClassifier = null
-    destinationDirectory.set("C:\\Users\\pintu\\Desktop\\Server" as File)
+    destinationDirectory.set(file("${System.getProperty('user.home')}/Desktop"))
 }
