Added dynamic arguments and messages

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,7 @@
 menu: #Only 2 types available at the moment! See https://geysermc.org/wiki/geyser/forms/ for examples
   test:
     type: MODAL #Simple with title, description and just 2 buttons!
-    title: "Modal test"
+    title: "Modal test $1"
     description: "Something here to write"
     buttons:
       bottone_1:
@@ -11,10 +11,10 @@ menu: #Only 2 types available at the moment! See https://geysermc.org/wiki/geyse
         text: "Other » thing"
         onClick: "command hello"
   test_simple:
-    command: "test" #this will open only if you do /test
+    command: "test $1" #this will open only if you do /test <argument>
     permission: "bedrockgui.permission"
     type: SIMPLE #Title, description and a lot of cool buttons
-    title: "A simple title"
+    title: "A simple title $1"
     description: "Long text to fit in the menu"
     buttons:
       button:
@@ -26,4 +26,4 @@ menu: #Only 2 types available at the moment! See https://geysermc.org/wiki/geyse
         image: "https://geysermc.org/assets/images/geyser-88cf8a88a1c88cc983b4c44d6b75f7fe.png"
       without_image:
         text: "Some fancy text with  »  %player_name% as placeholder"
-        onClick: "open test" #Will open the menu "test"
+        onClick: "open test $1" #Will open the menu "test" and pass argument
