--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -4,3 +4,4 @@ menu:
   noPex: "&4&lYou don't have permission to open this menu"
   noJava: "&4You are not a bedrock player. Please open this menu only from bedrock client"
   arguments: "&4This command requires at least {args} arguments."
+  notFound: "&cNo menu found with this name"
