--- a/build.gradle
+++ b/build.gradle
@@ -1,67 +1,21 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
     id 'java'
 }
 
-group = 'it.pintux'
-version = '1.6.0'
-
-repositories {
-    mavenCentral()
-    maven {
-        name = "papermc-repo"
-        url = "https://repo.papermc.io/repository/maven-public/"
-    }
-    maven {
-        name = "sonatype"
-        url = "https://oss.sonatype.org/content/groups/public/"
-    }
-    maven {
-        url = uri("https://repo.opencollab.dev/main/")
-    }
-    maven {
-        name = 'PAPI'
-        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
-    }
-
-    maven { url "https://repo.dmulloy2.net/repository/public/" }
-}
-
-dependencies {
-    compileOnly("io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT")
-    compileOnly('org.geysermc.floodgate:api:2.2.3-SNAPSHOT')
-    compileOnly 'me.clip:placeholderapi:2.11.6'
-}
-
-def targetJavaVersion = 17
-java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+allprojects {
+    group = 'it.pintux'
+    version = '1.0'
+    repositories {
+        mavenCentral()
     }
 }
 
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'UTF-8'
+subprojects {
+    apply plugin: 'java'
+    sourceCompatibility = '17'
+    targetCompatibility = '17'
 
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        options.release.set(targetJavaVersion)
+    dependencies {
+        // Common dependencies for all submodules, if any
     }
-}
-
-processResources {
-    def props = [version: version]
-    inputs.properties props
-    filteringCharset 'UTF-8'
-    filesMatching('plugin.yml') {
-        expand props
-    }
-}
-
-shadowJar {
-    minimize()
-    archiveClassifier = null
-    destinationDirectory.set(file("${System.getProperty('user.home')}/Desktop"))
 }
