--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -1,4 +1,4 @@
-name: Gradle Package
+name: Release projects
 
 on:
   push:
@@ -7,33 +7,58 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v3
+
     - name: Set up JDK 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v3
       with:
-        java-version: '17'
         distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+        java-version: '17'
 
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
 
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
+    - name: Build Bungee and Paper JARs
+      run: ./gradlew :bungeecord:shadowJar :paper:shadowJar
 
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Upload Bungee JAR as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: BedrockGUI-Bungee
+        path: bungeecord/build/libs/BedrockGUI-Bungee-*.jar
 
-    - name: Publish to GitHub Packages
-      run: ./gradlew publish
-      env:
-        USERNAME: ${{ github.actor }}
-        TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload Paper JAR as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: BedrockGUI-Paper
+        path: paper/build/libs/BedrockGUI-Paper-*.jar
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Download build artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: BedrockGUI-Bungee
+        path: .
+
+    - name: Download Paper JAR
+      uses: actions/download-artifact@v3
+      with:
+        name: BedrockGUI-Paper
+        path: .
+
+    - name: Create Release
+      uses: ncipollo/release-action@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        tag: ${{ github.ref_name }}
+        name: Release ${{ github.ref_name }}
+        files: |
+          ./BedrockGUI-Bungee-*.jar
+          ./BedrockGUI-Paper-*.jar
