--- a/bungeecord/build.gradle
+++ b/bungeecord/build.gradle
@@ -23,7 +23,6 @@ sourceSets {
         }
         resources {
             srcDirs = ['src/main/resources']
-            // Include common module resources
             srcDirs += project(':common').sourceSets.main.resources.srcDirs
         }
     }
@@ -51,14 +50,11 @@ processResources {
     inputs.properties props
     filteringCharset 'UTF-8'
 
-    // Include common resources
     from(project(':common').sourceSets.main.resources)
 
     filesMatching('plugin.yml') {
         expand props
     }
-
-    // Set the strategy for duplicate resources
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
@@ -67,5 +63,5 @@ shadowJar {
     minimize()
     archiveClassifier.set('')
     archiveBaseName.set('BedrockGUI-Bungee')
-    destinationDirectory.set(file("${System.getProperty('user.home')}/Desktop"))
+    //destinationDirectory.set(file("${System.getProperty('user.home')}/Desktop"))
 }
