--- a/bungeecord/build.gradle
+++ b/bungeecord/build.gradle
@@ -4,11 +4,12 @@ plugins {
 }
 
 group = 'it.pintux'
-version = '1.7.3'
+version = '1.7.4'
 
 repositories {
     mavenCentral()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
 }
 
 dependencies {
